tests/neg-custom-args/fatal-warnings/i8711.check
-- [E030] Match case Unreachable Error: tests/neg-custom-args/fatal-warnings/i8711.scala:7:9 ---------------------------
7 |    case x: B => x // error: this case is unreachable since class A is not a subclass of class B
  |         ^^^^
  |         Unreachable case
-- [E030] Match case Unreachable Error: tests/neg-custom-args/fatal-warnings/i8711.scala:12:9 --------------------------
12 |    case x: C => x // error
   |         ^^^^
   |         Unreachable case
